--- a/app/templates/roster.html
+++ b/app/templates/roster.html
@@ -142,7 +142,7 @@
                                     placeholder="Type to search..." autocomplete="off" required>
                                 <input type="hidden" id="contact_id">
                                 <button class="btn btn-primary" type="button" id="add-contact-btn"
-                                    title="Add New Contact" onclick="openContactModalWithReferer()">
+                                    title="Add Guest" onclick="openContactModalWithReferer()">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
