--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -27,7 +27,7 @@
     {% if is_authorized(Permissions.CONTACT_BOOK_EDIT) %}
     <div class="button-group">
       <button class="btn btn-primary" onclick="openContactModal()">
-        New Contact
+        Add Guest
       </button>
       <button class="btn btn-info" onclick="window.location.href='{{ url_for('roster_bp.roster') }}'">
         Open Roster
@@ -186,7 +186,7 @@
   { id: {{ m.id }}, name: {{ m.Name | tojson }} },
   {% endfor %}
   ];
-  console.log("MENTOR_CANDIDATES loaded:", MENTOR_CANDIDATES);
+
   
   // Global variables for contacts.js
   var canViewAllLogs = {{ 'true' if can_view_all_logs else 'false' }};
