--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="booking-container">
-    <h1>Booking Assistant</h1>
+    <h1><i class="fas fa-tag"></i> Booking Assistant</h1>
     {% if user_role != 'Guest' %}
     <h3 class="booking-section-header">My Upcoming Roles</h3>
     <div class="my-bookings-container">
