--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<h1>Contacts</h1>
+<h1><i class="fas fa-book"></i> Contacts</h1>
 
 <div class="contact-action-bar">
   <div class="stats-container">
