--- a/app/templates/pathway_library.html
+++ b/app/templates/pathway_library.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div id="pathway-library-container">
-  <h1>Pathway Library</h1>
+  <h1><i class="fas fa-landmark"></i> Pathway Library</h1>
 
   <div class="filters-container">
     <div class="form-group">
