--- a/app/templates/lucky_draw.html
+++ b/app/templates/lucky_draw.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container-fluid mt-4">
     <div class="lucky-draw-container">
-        <h1 class="page-title">Lucky Draw</h1>
+        <h1 class="page-title"><i class="fas fa-gift"></i> Lucky Draw</h1>
 
         {% if current_meeting %}
         <div class="meeting-info">
