--- a/app/templates/roster.html
+++ b/app/templates/roster.html
@@ -11,7 +11,7 @@
 <div class="container-fluid mt-4">
     <div class="roster-container">
         <div class="header-container" style="flex-direction: column; align-items: flex-start; gap: 10px;">
-            <h1>Meeting Roster</h1>
+            <h1><i class="fas fa-clipboard-list"></i> Meeting Roster</h1>
 
             {{ render_meeting_filter(all_meetings, selected_meeting_num, label=None, data_format='object',
             extra_style='padding: 0; background: none; border: none; box-shadow: none;') }}
