--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -85,19 +85,11 @@
           </a>
         </li>
         {% endif %}
-        {% if is_authorized(Permissions.ROSTER_VIEW) %}
-        <li class="{% if request.endpoint and request.endpoint.startswith('roster_bp') %}active{% endif %}">
-          <a href="{{ url_for('roster_bp.roster') }}">
-            <i class="fas fa-clipboard-list nav-icon"></i>
-            <span>Roster</span>
-          </a>
-        </li>
-        {% endif %}
-        {% if is_authorized(Permissions.LUCKY_DRAW_VIEW) %}
-        <li class="{% if request.endpoint and request.endpoint.startswith('lucky_draw_bp') %}active{% endif %}">
-          <a href="{{ url_for('lucky_draw_bp.lucky_draw') }}">
-            <i class="fas fa-gift nav-icon"></i>
-            <span>Lucky Draw</span>
+        {% if is_authorized(Permissions.ROSTER_VIEW) or is_authorized(Permissions.LUCKY_DRAW_VIEW) %}
+        <li class="{% if request.endpoint and request.endpoint.startswith('tools_bp') %}active{% endif %}">
+          <a href="{{ url_for('tools_bp.tools') }}">
+            <i class="fas fa-tools nav-icon"></i>
+            <span>Tools</span>
           </a>
         </li>
         {% endif %}
