--- a/app/templates/clubs.html
+++ b/app/templates/clubs.html
@@ -2,6 +2,8 @@
 
 {% block title %}Club Management{% endblock %}
 
+{% block flash_messages %}{% endblock %}
+
 {% block head_extra %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
